# rust-sandbox

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  copy_resources_folder  index.html  index.js  package-lock.json  package.json  webpack.config.js
.github/workflows/: build-unix.yml
examples/gltf-model/: main.rs
examples/hello-triangle/: main.rs
resources/: ao.bg  depth_only.pipeline  depth_only.vert  depth_only.vert.spv  gltf_model.bg  gltf_model.pipeline  hello-triangle.pipeline  normal.bg  normal_compute.bg  normal_compute.pipeline  normal_depth.comp  normal_depth.comp.spv  normal_depth.frag  normal_depth.frag.spv  normal_depth.pipeline  normal_depth.vert  normal_depth.vert.spv  normals.glsl  readme.txt  shader.vert  shader.vert.spv  structures.glsl
resources/aoScene/: aoScene.gltf
resources/cube/: cube.gltf
resources/examples/gltf-model/: gltf_model.bg  gltf_model.pipeline  shader.vert
resources/examples/hello-triangle/: hello-triangle.bg  hello-triangle.frag  hello-triangle.pipeline  hello-triangle.vert
src/: engine.rs  gl_setup.rs  lib.rs  main.rs  sandbox.rs  tests.rs  utility.rs
src/engine/: application.rs  graphics.rs  handle.rs  platform.rs  runtime.rs  shader.rs  tests.rs
src/engine/graphics/: api.rs  bindings.rs  buffer.rs  camera.rs  model.rs  shader.rs  texture.rs  ui.rs
src/engine/platform/: native.rs  wasm.rs
src/engine/platform/native/: core.rs  file_system.rs  platform_core.rs  shader.rs
src/engine/platform/wasm/: core.rs  file_system.rs  platform_core.rs  shader.rs
src/programs/: color_2d.rs  mod.rs
src/shaders/fragment/: color_2d.rs
src/shaders/vertex/: color_2d.rs
