[package]
name = "tutorial1-window"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "tutorial1-window"
path = "src/main.rs"

[dependencies]
image = "0.22"
cgmath = "0.17"
futures = "0.3.5"
#wgpu = "0.5.0"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
#needed for requiring platform web
winit = { version = "0.22.1", features = ["web-sys"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.62"
web-sys = { version = "0.3.39", features = [
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    "Gpu",
    "GpuAdapter",
    "GpuAddressMode",
    "GpuBindGroup",
    "GpuBindGroupEntry",
    "GpuBindGroupDescriptor",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutEntry",
    "GpuBindGroupLayoutDescriptor",
    "GpuBlendDescriptor",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuBindingType",
    "GpuBuffer",
    "GpuBufferBinding",
    "GpuBufferCopyView",
    "GpuBufferDescriptor",
    "GpuCanvasContext",
    "GpuColorDict",
    "GpuColorStateDescriptor",
    "GpuCommandBuffer",
    "GpuCommandBufferDescriptor",
    "GpuCommandEncoder",
    "GpuCommandEncoderDescriptor",
    "GpuCompareFunction",
    "GpuComputePassDescriptor",
    "GpuComputePassEncoder",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuCullMode",
    "GpuDepthStencilStateDescriptor",
    "GpuDevice",
    "GpuDeviceDescriptor",
    "GpuExtent3dDict",
    "GpuFilterMode",
    "GpuFrontFace",
    "GpuIndexFormat",
    "GpuInputStepMode",
    "GpuLimits",
    "GpuLoadOp",
    "GpuOrigin3dDict",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuPowerPreference",
    "GpuPrimitiveTopology",
    "GpuProgrammableStageDescriptor",
    "GpuQueue",
    "GpuRasterizationStateDescriptor",
    "GpuRenderPassColorAttachmentDescriptor",
    "GpuRenderPassDepthStencilAttachmentDescriptor",
    "GpuRenderPassDescriptor",
    "GpuRenderPassEncoder",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuRequestAdapterOptions",
    "GpuSampler",
    "GpuSamplerDescriptor",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuStencilOperation",
    "GpuStencilStateFaceDescriptor",
    "GpuStoreOp",
    "GpuSwapChain",
    "GpuSwapChainDescriptor",
    "GpuTexture",
    "GpuTextureAspect",
    "GpuTextureComponentType",
    "GpuTextureCopyView",
    "GpuTextureDescriptor",
    "GpuTextureDimension",
    "GpuTextureFormat",
    "GpuTextureViewDescriptor",
    "GpuTextureViewDimension",
    "GpuTextureView",
    "GpuVertexAttributeDescriptor",
    "GpuVertexBufferLayoutDescriptor",
    "GpuVertexFormat",
    "GpuVertexStateDescriptor",
    "GpuVertexAttributeDescriptor",
    "HtmlCanvasElement",
    "Window",
]}
js-sys = "0.3.39"
wasm-bindgen-futures = "0.4.12"
console_error_panic_hook = "0.1.6"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_log = "0.1.2"