[package]
edition = "2018"
name = "rust-sandbox"
version = "0.1.0"
authors = ["Marco Giordano <marco.giordano.work@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
image = "0.23.4"
#cgmath = "0.17"
cgmath = {git = "https://github.com/rustgd/cgmath" , branch="master"}
futures = "0.3.5"
#wgpu = "0.5.0"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev="89ee5bffd3c37279f733b76b05e5d030aba035db"  }
#needed for requiring platform web
winit = { version = "0.22.2", features = ["web-sys"] }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
bytemuck = "1.2.0"
async-trait = "0.1.35"
serde_json = "1.0.55"
gltf = "0.15.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
shaderc = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.62"
web-sys = { version = "0.3.40", features = [
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    "Gpu",
    "GpuAdapter",
    "GpuAddressMode",
    "GpuBindGroup",
    "GpuBindGroupEntry",
    "GpuBindGroupDescriptor",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutEntry",
    "GpuBindGroupLayoutDescriptor",
    "GpuBlendDescriptor",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuBindingType",
    "GpuBuffer",
    "GpuBufferBinding",
    "GpuBufferCopyView",
    "GpuBufferDescriptor",
    "GpuCanvasContext",
    "GpuColorDict",
    "GpuColorStateDescriptor",
    "GpuCommandBuffer",
    "GpuCommandBufferDescriptor",
    "GpuCommandEncoder",
    "GpuCommandEncoderDescriptor",
    "GpuCompareFunction",
    "GpuComputePassDescriptor",
    "GpuComputePassEncoder",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuCullMode",
    "GpuDepthStencilStateDescriptor",
    "GpuDevice",
    "GpuDeviceDescriptor",
    "GpuExtent3dDict",
    "GpuFilterMode",
    "GpuFrontFace",
    "GpuIndexFormat",
    "GpuInputStepMode",
    "GpuLimits",
    "GpuLoadOp",
    "GpuOrigin3dDict",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuPowerPreference",
    "GpuPrimitiveTopology",
    "GpuProgrammableStageDescriptor",
    "GpuQueue",
    "GpuRasterizationStateDescriptor",
    "GpuRenderPassColorAttachmentDescriptor",
    "GpuRenderPassDepthStencilAttachmentDescriptor",
    "GpuRenderPassDescriptor",
    "GpuRenderPassEncoder",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuRequestAdapterOptions",
    "GpuSampler",
    "GpuSamplerDescriptor",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuStencilOperation",
    "GpuStencilStateFaceDescriptor",
    "GpuStoreOp",
    "GpuSwapChain",
    "GpuSwapChainDescriptor",
    "GpuTexture",
    "GpuTextureAspect",
    "GpuTextureComponentType",
    "GpuTextureCopyView",
    "GpuTextureDescriptor",
    "GpuTextureDimension",
    "GpuTextureFormat",
    "GpuTextureViewDescriptor",
    "GpuTextureViewDimension",
    "GpuTextureView",
    "GpuVertexAttributeDescriptor",
    "GpuVertexBufferLayoutDescriptor",
    "GpuVertexFormat",
    "GpuVertexStateDescriptor",
    "GpuVertexAttributeDescriptor",
    "HtmlCanvasElement",
    "Window",
    'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
]}
js-sys = "0.3.39"
wasm-bindgen-futures = "0.4.12"
console_error_panic_hook = "0.1.6"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
reqwest = { version = "0.10", features = ["json"] }


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_log = "0.1.2"